scss/__widget.navbar.scss
.navbar {
    display: flex;
    flex-direction: row;
    background-color: $background-color-inverse;
    box-shadow: 0 0 45px $background-color-inverse;
    @include apply-absolute-color( $color-inverse );

    @media ( max-width: 520px ) {
        flex-direction: column;

        > :not( hr ):first-child {
            border-bottom: 3px $color-inverse solid;
        }
    }

    > :not( hr ) {
        font-weight: bold;
        font-family: Signika;
        padding: #{$padding * .375} $padding;

        &:not(:first-child) {
            position: relative;

            &::before {
                width: 0;
                bottom: 0;
                left: 50%;
                content: '';
                height: 3px;
                position: absolute;
                background-color: transparent;
                transition: none ease-in-out .3s;
                transition-property: left, width, background-color;
            }

            &:hover::before {
                left: 0;
                width: 100%;
                background-color: $color-inverse;
            }
        }
    }

    > hr {
        opacity: 0;
        flex-grow: 1;

        ~ :not( hr ) {
            font-weight: normal;
        }
    }
}

html > body > nav {
    top: 0;
    z-index: 999;
    @extend .navbar;
    position: sticky;
}

